Completed assignment, order changes based on user selections. Additional charge is added when delivery is checked.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string-array name="toppings">
         <item>Pepperoni</item>
         <item>Chicken</item>
-        <item>Vegitarian</item>
+        <item>Vegetarian</item>
+        <item>Sausage</item>
     </string-array>
 </resources>
